# NetForge

./: .gitignore  LICENSE  README.md  TUTORIAL.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
examples/toy_nl/: build_toy_nl_dataset.py
experiments/partition_factor_full_workflow_280d/: README.md
experiments/partition_factor_full_workflow_280d/scripts/: partition_factor_full_workflow.py  run_cr35_partition_factor_full_workflow.sh
experiments/partition_factor_full_workflow_280d/settings/: combo_labels.txt  combo_specs.json  run_manifest.json
experiments/partition_factor_full_workflow_280d/settings/combos/: meta_off__cov_off__layered_off.json  meta_off__cov_off__layered_on.json  meta_off__cov_on__layered_off.json  meta_off__cov_on__layered_on.json  meta_on__cov_off__layered_off.json  (+3 more)
experiments/partition_factor_grid_refresh_280d/: README.md
experiments/partition_factor_grid_refresh_280d/scripts/: partition_factor_grid_refresh.py  run_cr35_partition_factor_grid_refresh.sh
experiments/partition_factor_grid_refresh_280d/settings/: base_config.json  combo_specs.json  run_manifest.json
site_docs/: cli.md  data-format.md  index.md  installation.md  quickstart.md  simulation.md
site_docs/api/: cli.md  diagnostics.md  index.md  pipeline.md  simulation.md
site_docs/stylesheets/: extra.css
temporal_sbm/: __init__.py  __main__.py  cli.py  creator.py  creator_notes.md  diagnostics.py  pipeline.py  simulation.py  sweep.py
tests/: __init__.py  test_cli.py  test_diagnostics.py  test_pipeline.py  test_simulation.py  test_sweep.py  test_toy_dataset.py
(+24 files in other folders)
